<resources>
    <string name="app_name">WheelyTest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="username_error">Need enter an username</string>
    <string name="password_error">Need enter a password</string>
    <string name="permission_location_denied">Access to location service is denied</string>
    <string name="dialog_location_permission_message">Please allow access to location service</string>
    <string name="about_location_permissions_info">Application must have permissions access to location</string>
    <string name="settings">Settings</string>
    <string name="waiting_satellites">Waiting satellites</string>
    <string name="waiting_network">Waiting network</string>
</resources>
